Remove Python 2 and default to Python 3
Use modm from pip to track dependencies

--- a/requirements3.txt
+++ b/requirements3.txt
@@ -1,13 +1,11 @@
+modm
 scons
-lxml
-jinja2
 configparser
-future
+
+# system_layout.py
 numpy
-wheel
 pyx
-pyelftools
-lbuild
+
 graphviz
 mkdocs
 mkdocs-material
