--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -37,7 +37,7 @@ jobs:
           push: true
           tags: |
             ghcr.io/modm-ext/modm-build-base:${{ env.VERSION }}
-            ghcr.io/modm-ext/modm-build-base:latest
+            ghcr.io/modm-ext/modm-build-base:${{github.ref == 'refs/heads/master' && 'latest' || 'testing' }}
 
 
       - name: Build and push modm-build-avr
@@ -49,7 +49,7 @@ jobs:
           push: true
           tags: |
             ghcr.io/modm-ext/modm-build-avr:${{ env.VERSION }}
-            ghcr.io/modm-ext/modm-build-avr:latest
+            ghcr.io/modm-ext/modm-build-avr:${{github.ref == 'refs/heads/master' && 'latest' || 'testing' }}
 
       - name: Build and push modm-build-cortex-m
         uses: docker/build-push-action@v2
@@ -60,7 +60,7 @@ jobs:
           push: true
           tags: |
             ghcr.io/modm-ext/modm-build-cortex-m:${{ env.VERSION }}
-            ghcr.io/modm-ext/modm-build-cortex-m:latest
+            ghcr.io/modm-ext/modm-build-cortex-m:${{github.ref == 'refs/heads/master' && 'latest' || 'testing' }}
 
       - name: Build and push modm-build-risc-v
         uses: docker/build-push-action@v2
@@ -71,4 +71,4 @@ jobs:
           push: true
           tags: |
             ghcr.io/modm-ext/modm-build-risc-v:${{ env.VERSION }}
-            ghcr.io/modm-ext/modm-build-risc-v:latest
+            ghcr.io/modm-ext/modm-build-risc-v:${{github.ref == 'refs/heads/master' && 'latest' || 'testing' }}
