--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -23,6 +23,7 @@ jobs:
          for dockerfile in *.Dockerfile; do
           sed -i "s/modm-build-base:TAG/modm-build-base:${{ env.VERSION }}/g" $dockerfile
          done
+         sed -i "s/modm-build-cortex-m:TAG/modm-build-cortex-m:${{ env.VERSION }}/g" cortex-m-openocd.Dockerfile
          git diff
 
       - name: Set up Docker Buildx
@@ -68,6 +69,17 @@ jobs:
           tags: |
             ghcr.io/modm-ext/modm-build-cortex-m:${{ env.VERSION }}
             ghcr.io/modm-ext/modm-build-cortex-m:${{github.ref == 'refs/heads/master' && 'latest' || 'testing' }}
+
+      - name: Build and push modm-build-cortex-m-openocd
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./cortex-m-openocd.Dockerfile
+          platforms: linux/amd64
+          push: true
+          tags: |
+            ghcr.io/modm-ext/modm-build-cortex-m-openocd:${{ env.VERSION }}
+            ghcr.io/modm-ext/modm-build-cortex-m-openocd:${{github.ref == 'refs/heads/master' && 'latest' || 'testing' }}
 
       - name: Build and push modm-build-risc-v
         uses: docker/build-push-action@v2
